Thu Feb 26 19:48:39 2004  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/xsettings-client.c (read_settings): Fix memory leak
	in case of mismatched property type.

Thu Feb 26 18:25:57 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooser.h (GtkFileChooserAction): Add two more folder
	modes to the enum.

	* gtk/gtkfilechooser.c (gtk_file_chooser_set_folder_mode): Remove.
	(gtk_file_chooser_get_folder_mode): Remove

Thu Feb 26 17:29:04 2004  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c (gdk_wm_protocols_filter): Return
	GDK_FILTER_CONTINUE for unhandled message types.

	* gdk/x11/gdkevents-x11.c (gdk_event_translate): Allow
	multiple filters for the same event type with the standard
	"GDK_FILTER_CONTINUE == pretend I wasn't here" semantics.

	* gdk/x11/gdkevents-x11.c (gdk_display_add_client_message_filter):
	Append to the filter list not prepend, since order now matters.

	* gdk/win32/gdkevents-win32.c (gdk_add_client_message_filter): 
	Append to the filter list not prepend, since order now matters.
	
Thu Feb 26 23:39:07 2004  Matthias Clasen  <maclas@gmx.de>

	Fixes for #135333, analysed by Damon Chaplin:
	
	* gtk/gtkcombobox.c (gtk_combo_box_list_button_pressed): Don't
	grab here.
	* gtk/gtkcombobox.c (gtk_combo_box_popup): Do the grabs here, 
	so that we don't forget to grab when the menu is popped via
	keynav.
	* gtk/gtkcombobox.c (gtk_combo_box_list_button_released): Don't
	ungrab here.
	* gtk/gtkcombobox.c (gtk_combo_box_popdown): Do the ungrabs here.

Thu Feb 26 23:26:00 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkstatusbar.c (set_grip_cursor): New function. Use resize
	cursors for resize grips. (Bug #129621)

	* gtk/gtktoolbar.c (gtk_toolbar_get_relief_style): Documentation
	fix - patch by Torsten Schoenfeld.

	* gtk/gtkmenubar.c (gtk_menu_bar_size_request): don't request
	space between the items. (Bug #110775)

	* gtk/gtkrc.c (_gtk_rc_init): Provide extra horizontal padding